0705 전체 수정완료

--- a/src/main/resources/templates/th/admin/statAdmin/sellerDetail.html
+++ b/src/main/resources/templates/th/admin/statAdmin/sellerDetail.html
@@ -9,6 +9,7 @@
 <body>
 <div layout:fragment="content">
     <div class="container">
+        <h2>거래처 상세</h2>
         <div class="login_wrapper">
             <div class="row justify-content-center">
                 <div class="col-md-5 col-xs-10 md-auto">
@@ -18,26 +19,23 @@
                                th:value="${sellerDetail.sellerId}" style="background-color: #FFFFFF;" readonly>
                     </div>
                     <div class="mb-4">
-                        <label for="sellerPw">업체명<span class="text-muted"></span></label> <input
-                            type="text" class="form-control" id="sellerPw" name="sellerPw"
-                            th:value="${sellerDetail.sellerName}" style="background-color: #FFFFFF;" readonly>
-
-                    </div>
-                    <div class="mb-4">
-                        <label for="sellerName">사업자등록번호<span class="text-muted"></span></label> <input
+                        <label for="sellerName">업체명<span class="text-muted"></span></label> <input
                             type="text" class="form-control" id="sellerName" name="sellerName"
-                            th:value="${sellerDetail.sellerRes}" style="background-color: #FFFFFF;" readonly>
-
+                            th:value="${sellerDetail.sellerName}" style="background-color: #FFFFFF;" readonly>
                     </div>
                     <div class="mb-4">
-                        <label for="sellerRes">업체홈페이지<span class="text-muted"></span></label> <input
+                        <label for="sellerRes">사업자등록번호<span class="text-muted"></span></label> <input
                             type="text" class="form-control" id="sellerRes" name="sellerRes"
-                            th:value="${sellerDetail.sellerUrl}" style="background-color: #FFFFFF;" readonly>
-
+                            th:value="${sellerDetail.sellerRes}" style="background-color: #FFFFFF;" readonly>
                     </div>
                     <div class="mb-4">
-                        <label for="sellerUrl">영업담당자<span class="text-muted"></span></label> <input
+                        <label for="sellerUrl">업체홈페이지<span class="text-muted"></span></label> <input
                             type="text" class="form-control" id="sellerUrl" name="sellerUrl"
+                            th:value="${sellerDetail.sellerUrl}" style="background-color: #FFFFFF;" readonly>
+                    </div>
+                    <div class="mb-4">
+                        <label for="Manager">영업담당자<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="Manager" name="Manager"
                             th:value="${sellerDetail.sellerManager}" style="background-color: #FFFFFF;" readonly>
                     </div>
                     <div class="mb-4">
@@ -51,8 +49,8 @@
                             th:value="${sellerDetail.managerEmail}" style="background-color: #FFFFFF;" readonly>
                     </div>
                     <div class="mb-4">
-                        <label for="managerEmail">주소<span class="text-muted"></span></label> <input
-                            type="text" class="form-control" id="addr" name="addr"
+                        <label for="sellerAddr">주소<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="sellerAddr" name="sellerAddr"
                             th:value="${sellerDetail.sellerAddr}" style="background-color: #FFFFFF;" readonly>
                     </div>
                 </div>
