--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -21,14 +21,13 @@
                             니가사는그집 인테리어 고수들과 전문가들에게 조언을 받으세요.
                         </p>
                     </div>
-                    <form id="questions-header__form" class="sticky-top" action="" accept-charset="UTF-8" method="get">
-                        <input name="utf8" type="hidden" value="">
+                    <form id="questions-header__form" class="sticky-top" action="/askSearchList" accept-charset="UTF-8" method="get">
                         <div class="sticky-content">
                             <div class="questions-header__form__wrap row">
                                 <div class="questions-header__form__search col">
                                     <span class="icon icon-etc-find-sm-gray-dark search" ></span>
-                                    <input type="text" name="query" id="questions-header__form__search" value=""
-                                           class="form-control" placeholder="궁금한 것을 검색해보세요." autocomplete="off">
+                                    <input type="text" name="keyword" id="keyword"
+                                           class="form-control" placeholder="궁금한 것을 검색해보세요.">
                                 </div>
                             </div>
                         </div>
