--- a/src/main/resources/templates/th/askBoard/askBoardUpdate.html
+++ b/src/main/resources/templates/th/askBoard/askBoardUpdate.html
@@ -17,12 +17,12 @@
     <div class="container">
     <h2>글 수정</h2>
     <form action="/askupdateProc" method="post" id="updateBoardFrm" enctype="multipart/form-data">
-        <div class="form-group">
-            <label for="askTitle">제목</label>
+        <div class="mt-4 mb-3">
+            <label for="askTitle">제목<span class="text-muted"/></label>
             <input type="text" th:value="${detail.askTitle}" id="askTitle" name="askTitle"/>
         </div>
-        <div class="form-group">
-            <label for="askContent">내용</label>
+        div class="mt-4 mb-3">
+        <label for="askContent">내용<span class="text-muted"/></label>
             <textarea name="askContent" id="askContent" style="width: 700px; height: 400px; ">
                 <th:block th:utext="${detail.askContent}"/></textarea>
         </div>
