--- a/src/main/resources/templates/th/admin/statAdmin/sellerManagement.html
+++ b/src/main/resources/templates/th/admin/statAdmin/sellerManagement.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <div class="container">
     <h2>거래처 목록</h2>
-
     <table class="table table-hover">
         <tr>
             <th>업체명</th>
@@ -24,6 +24,7 @@
             </tr>
         </th:block>
     </table>
+</div>
 </div>
 </body>
 </html>
