--- a/src/main/resources/templates/th/askBoard/askBoardReplyInsert.html
+++ b/src/main/resources/templates/th/askBoard/askBoardReplyInsert.html
@@ -18,12 +18,12 @@
     <div class="container">
     <h2>답글 작성</h2>
     <form action="/askreplyProc" method="post" id="replyInsertBoardFrm" enctype="multipart/form-data">
-        <div class="form-group">
-            <label for="askTitle">제목</label>
+        <div class="mt-4 mb-3">
+            <label for="askTitle">제목<span class="text-muted"/></label>
             <input type="text" th:value="'RE: '+${detail.askTitle}" id="askTitle" name="askTitle" readonly/>
         </div>
-        <div class="form-group">
-            <label for="askContent">내용</label>
+        <div class="mt-4 mb-3">
+            <label for="askContent">내용<span class="text-muted"/></label>
             <textarea name="askContent" id="askContent" style="width: 700px; height: 400px;"></textarea>
         </div>
         <input type="hidden" id="askGroupNo" name="askGroupNo" th:value="${detail.askGroupNo}"/>
