--- a/src/main/resources/templates/th/photoBoard/photoBoardInsert.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardInsert.html
@@ -11,32 +11,29 @@
     <script type="text/javascript" th:src="@{/js/profile.js}"></script>
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
-
-
 </head>
-
 <body>
-<h2>사진 글쓰기</h2><!-- 삭제 -->
+<h2>사진</h2>
 <div layout:fragment="content">
     <div class="container">
         <form action="/photoInsertProc" method="post" id="insertphoto" name="insertphoto" enctype="multipart/form-data">
             <div class="input-group">
                 <select class="custom-select col-md-2" th:id="inputGroupSelect01" name="areaCode">
-                    <option th:value selected disabled>평수</option>
+                    <option th:value selected disabled>평수(필수)</option>
                     <option id="areaSelect" th:each="area : ${areaCode}"
                             th:value="${area.areaCode}"
                             th:utext="${area.areaType}"/>
                     <input type="hidden" id="area" name="area" value=""/>
                 </select>
                 <select class="custom-select col-md-2" id="houseGroup" name="houseCode">
-                    <option th:value selected disabled>주거형태</option>
+                    <option th:value selected disabled>주거형태(필수)</option>
                     <option id="houseSelect" th:each="house : ${houseCode}"
                             th:value="${house.houseCode}"
                             th:utext="${house.houseType}"/>
                     <input type="hidden" id="house" name="house" value=""/>
                 </select>
                 <select class="custom-select col-md-2" id="styleGroup" name="styleCode">
-                    <option th:value selected disabled>스타일</option>
+                    <option th:value selected disabled>스타일(필수)</option>
                     <option id="styleSelect" th:each="style : ${styleCode}"
                             th:value="${style.styleCode}"
                             th:utext="${style.styleType}"/>
