--- a/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
@@ -51,7 +51,7 @@
                 inputSellerName: inputSellerName
             },
             success: function (data) {
-                alert("suc");
+                console.log("suc");
             },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
             error: function () {
                 alert("test err");
@@ -73,16 +73,8 @@
     sessionStorage.setItem("sellerName",sellN);
     sellN = sessionStorage.getItem("sellerName");
 
-    console.log("안녕하세요 yearList입니다 : " + yearList);
-    //console.log("안녕하세요 yearlyJson입니다 : " + yearlyJson123);
-    console.log("json ? : " + json); // year, productName, orderQty
     var jsonParse = JSON.parse(json);
-    console.log("sellN : ? " + sellN);
-
-    console.log("yearlyJson : ? " + yearlyJson);
     var yearlyJsonParse = JSON.parse(yearlyJson);
-    console.log("yearlyJsonParse ? : " + yearlyJsonParse);
-
     var yearlyYearArr = new Array(); // 연
     var yerlyQtyArr = new Array();// 판매량
     var yearlyTotalPrice = new Array();    // 총액
@@ -94,36 +86,12 @@
         yearlyTotalPrice[j] = yearlyJsonParse[j].totalPrice;
         // yearlySellerNameArr[j] = yearlyJsonParse[j].sellerName;
     }
-
-    console.log("yearlyYearArr :: " + yearlyYearArr + yerlyQtyArr + yearlyTotalPrice + "sellerName :: " + sellN);
-    //var jsonYear = JSON.parse(yearList);
-
-    //var chart1Arr = new Array();
     var yearArr = new Array();
     var yearArr2 = new Array();
     var productNo = new Array();
-
-    /*for (var i = 0; i < jsonParse.length; i++) {
-        chart1Arr[i] = jsonParse[i].orderQty;
-        productNo[i] = jsonParse[i].productNo; // 품목명을 입력 받아서  날짜ㅡㅣ판매량
-        yearArr2[i] = jsonParse[i].year;                                        // 날짜를 입력 받아서 품목 ㅡ ㅣ 판매량
-        //yearArr[i] = jsonParse[i].productionDay;
-    }*/
-    /*for (var i = 0; i < yearList.length; i++) {
-        yearArr[i] = yearList[i];
-    }*/
-    //console.log("chart1Arr" + chart1Arr + "yearArr : " + yearArr);
-    console.log("productNo : " + productNo);
-
-
-    //var productArray2 = new Array(6);
-    //var chart1ProductArray = new Array(1,2,3,4,5,6);
-
-    // 공통 data
     var backC =
         'rgba(102, 152, 217, 1)'
     ;
-    //borderColor: backgroundColor:
     var borderC =
         'rgba(27, 87, 166, 0.2)'
     ;
@@ -197,7 +165,7 @@
                         success: function (data) {
                             // ajax 성공시 chart2() 호출
                             globalGraph2Return = data;
-                            alert(globalGraph2Return);
+                            //alert(globalGraph2Return);
                             reload1();
                             chart2();
                         },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
@@ -206,11 +174,6 @@
                         }
                     });
 
-
-                    //var url = "http://example.com/?label=" + label + "&value=" + value;
-                    //console.log(url);
-                    //alert(url);
-                    //location.replace(url);
                 }
             };
         }
@@ -236,11 +199,9 @@
     function chart2() {
 
         console.log("chart2입니다 :: " + globalGraph2Return);
-        //var monthlyAjaxResult = JSON.parse(globalGraph2Return);
         var monthlyMonthArr = new Array();
         var monthlyQtyArr = new Array();
         var monthlyTotalPriceArr = new Array();
-        //console.log("graph : " + monthlyAjaxResult +"len : "+2);
         for (var i = 0; i < globalGraph2Return.length; i++) {
             monthlyMonthArr[i] = globalGraph2Return[i].month;
             monthlyTotalPriceArr[i] = globalGraph2Return[i].totalPrice;
@@ -271,7 +232,6 @@
                 document.getElementById("myChart3").style.display = 'block';
             } else {
                 console.log("이미 보여져있다");
-                //document.getElementById("myChart3").style.display = 'none';
             }
 
             var activePoints = chart2.getElementsAtEvent(evt); // aP선언
@@ -291,7 +251,6 @@
                 var url = "http://example.com/?label=" + monthLabel + "&value=" + value;
                 console.log(url);
 
-                alert(url);
 
                 var monthform = {
                     product: productNo[0],
@@ -301,16 +260,13 @@
                 }
                 console.log("product : " + productNo[0]);
                 console.log("month : " + monthLabel);
-                //location.replace(url);
                 $.ajax({
-                    //console.log("hi");
                     url: "monthGraphAjax",
                     type: "POST",
                     async: false,
                     data: monthform,
                     success: function (data) {
                         globalGraph3Return = data;
-                        alert(globalGraph3Return);
                         reload2();
                         chart3();
                     },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
@@ -335,7 +291,6 @@
         var dailyDayArr = new Array();
         var dailyQtyArr = new Array();
         var dailyTotalPriceArr = new Array();
-        //console.log("graph : " + monthlyAjaxResult +"len : "+2);
         for (var i = 0; i < globalGraph3Return.length; i++) {
             dailyDayArr[i] = globalGraph3Return[i].day;
             dailyTotalPriceArr[i] = globalGraph3Return[i].totalPrice;
@@ -374,112 +329,11 @@
 
                 var url = "http://example.com/?label=" + label + "&value=" + value;
                 console.log(url);
-                alert(url);
-
-                //location.replace(url);
             }
         };
     }
 
 
-    /*
-     make sure click was on an actual point
-    if (activePoints.length > 0) {
-    var clickedDatasetIndex = activePoints[0]._datasetIndex;
-    var clickedElementindex = activePoints[0]._index;
-    var label = myLine.data.labels[clickedElementindex];
-    var value = myLine.data.datasets[clickedDatasetIndex].data[clickedElementindex];
-    alert("Clicked: " + label + " - " + value);
-    }
-    */
 </script>
-
-<!-- 차트 div 끝 -->
-<!-- layer 버튼 시작 -->
-<!-- <button name = "myShow2" onclick=showHide2();> layer2 </button><br>  버튼 필요 없으면 삭제 예정-->
-<!-- <button name = "myShow3" onclick=showHide3();> layer3 </button> -->
-
-<!-- type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-/*Controller 에서
- * ObjectMapper mapper = new ObjectMapper();
- String jsonText = mapper.writeValueAsString( list );
- model.addAttribute( "json", jsonText );
- */-->
-
-<!--
-/*
-- Chart를 생성하면서,
-- ctx를 첫번째 argument로 넘겨주고,
-- 두번째 argument로 그림을 그릴때 필요한 요소들을 모두 넘겨줍니다.
-* 타입 종류 : bar, line, pie
-*/
-
-    /* function ajaxGraph(){
-    var checkboxValues = [];
-    $("input[name='hobby']:checked").each(function(i) {
-        checkboxValues.push($(this).val());
-    });
-
-    // 사용자 ID(문자열)와 체크박스 값들(배열)을 name/value 형태로 담는다.
-    //var allData = { "userId": userId, "checkArray": checkboxValues };
-     //
-
-     var abcd = {
-    		 [[id:1,pasw:2],[id:2,pasw:3], ]
-     }
-    $.ajax({
-        url:"goUrl.do",
-        type:'GET',
-        data: allData,
-        success:function(data){
-            alert("완료!");
-            window.opener.location.reload();
-            console.log(data);
-            abcd = data.d;
-
-            self.close();
-        },
-        error:function(jqXHR, textStatus, errorThrown){
-            alert("에러 발생~~ \n" + textStatus + " : " + errorThrown);
-            self.close();
-        }
-    });
-} */
- -->
-
-
-<!-- 보여주기 감추기 -->
-<!-- 필요 없을지도
-<script>
-    function showHide2() {
-        if (document.getElementById("myChart2").style.display == 'none') {
-            document.getElementById("myChart2").style.display = 'block';
-        } else {
-            console.log("이미 보여져있다");
-            //document.getElementById("myChart2").style.display = 'none';
-        }
-    }
-
-</script>
-
-<script>
-    function showHide3() {
-        if (document.getElementById("myChart3").style.display == 'none') {
-            document.getElementById("myChart3").style.display = 'block';
-        } else {
-            document.getElementById("myChart3").style.display = 'none';
-        }
-    }
-
-
-
-
-
-
-</script>
--->
-
-
-
 </body>
 </html>
