--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>소비패턴</title>
     <th:block layout:fragment="css">
       <!--  <link rel="stylesheet" th:href="@{/css/statAdmin.css}">-->
     </th:block>
